<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sample Compose</string>
    <string name="error_generic">Unexpected error</string>
    <string name="message_first_time_launch">This is the first time launch</string>

    <!-- Screen titles -->
    <string name="list_title">List</string>
    <string name="details_title">Details</string>
    <string name="search_title">Search</string>

    <!-- Search screen -->
    <string name="enter_username">Enter username</string>
    <string name="create_deeplink">Create Deeplink</string>

    <!-- Details screen -->
    <string name="login_required">Login required to like</string>
    <string name="welcome_back">Welcome back, %s!</string>

    <!-- Login screens -->
    <string name="do_you_have_account">Do you have an account?</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="username">Username</string>

    <!-- Test tags -->
    <string name="test_tag_back_button">Back</string>
    <string name="test_tag_favorite_button">Favorite</string>
    <string name="test_tag_user_name_field">Username Field</string>
    <string name="test_tag_login_button">Login Button</string>
</resources>
